--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.2",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "emoji-mart": "^5.1.0",
+    "firebase": "^9.8.2",
+    "moment": "^2.29.3",
     "next": "latest",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
